# maxogram

./: CHANGELOG.md  README.md  context7.json  pyproject.toml
docs/: quickstart.md
examples/: echo_bot.py  error_handling.py  i18n_bot.py  multibot.py  scene_bot.py  webhook_bot.py
src/maxogram/: __meta__.py
src/maxogram/client/: bot.py
src/maxogram/dispatcher/: router.py
src/maxogram/dispatcher/event/: handler.py
tests/: test_client_bot.py  test_smoke.py
tests/test_dispatcher/: test_dispatcher.py  test_router.py
tests/test_dispatcher/test_event/: test_handler.py
